Se terminó la practica

--- a/views/tabla.html
+++ b/views/tabla.html
@@ -11,6 +11,57 @@
 
     <h1>Tablas</h1>
 
+    <table>
+        <tr>
+            <td>#</td>
+            <td>Codigo</td>
+            <td>Estudiantes</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>LG24001</td>
+            <td>Juan Emilio Lopez Guido</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>LB24001</td>
+            <td>Helena Eunice Lue Barrera</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>AF24001</td>
+            <td>Sara Carolina Aguirre Fuentes</td>
+        </tr>
+    </table>
+
+    <table>
+        <thead>
+            <tr>
+                <th>#</th>
+                <th>Codigo</th>
+                <th>Estudiante</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>LG24001</td>
+                <td>Juan Emilio Lopez Guido</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>LB24001</td>
+                <td>Helena Eunice Lue Barrera</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>AF24001</td>
+                <td>Sara Carolina Aguirre Fuentes</td>
+            </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+    </table>
+
     <!--Direccionamiento-->
     <br />
     <a href="../index.html">Regresar al inicio</a>
