--- a/views/texto.html
+++ b/views/texto.html
@@ -19,7 +19,7 @@
     <p>Esto es un parrafo</p>
     <p>Esto es un <b>parrafo</b></p>
     <p>Esto es un <i>parrafo</i></p>
-    <p>Esto es un <u>parrafo</u></p>
+    <p>Esto es un <u><i><b>parrafo</u></i></b></p>
 
     <!--direccionamiento-->
     <br />
