--- a/views/formularios.html
+++ b/views/formularios.html
@@ -11,6 +11,51 @@
 
     <h1>Formularios</h1>
 
+    <form>
+
+        <label>Nombre Completo</label>
+        <br />
+        <input type="text" id="txtNombre* requirired" />
+        <br />
+        <br />
+
+        <label>Correo</label>
+        <br>
+        <input type="email" id="txtCorreo" placeholder="nombre@gmail.com" required />
+        <br />
+        <br />
+
+        <label>Fecha</label>
+        <br />
+        <input type="date" id="txtFecha* requirired" />
+        <br />
+        <br />
+
+        <label>Telefono</label>
+        <br />
+        <input type="tel" id="txtTelefono* placeholder=" 0000-0000" requirired" />
+        <br />
+        <br />
+
+        <label>Asunto</label>
+        <br />
+        <select id="slAsunto" required>
+            <option value="VENTAS">VENTAS</option>
+            <option value="SOPORTE">SOPORTE</option>
+            <option value="RECLAMO">RECLAMO</option>
+        </select>
+        <br />
+        <br />
+
+        <label>Mensaje</label>
+        <br />
+        <textarea id="txtMensaje" rows="3" cols="60" required></textarea>
+        <br />
+        <br />
+
+        <button type="submit">Enviar</button>
+    </form>
+
     <!--Direccionamiento-->
     <br />
     <a href="../index.html">Regresar al inicio</a>
